--- a/index.html
+++ b/index.html
@@ -4,7 +4,333 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/animation.css">
+    <link rel="stylesheet" href="./css/responsive.css">
+    <script
+      src="https://kit.fontawesome.com/68efee9f82.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Saas company</title>
   </head>
-  <body></body>
+  <body>
+    <div class="top-section-content">
+      <header class="header">
+        <div class="logo">
+          <img src="./assets/logos/logo-front.svg" alt="" />
+        </div>
+        <div class="nav">
+          <div class="nav-lists">
+            <ul class="nav-items">
+              <i class="fa-solid fa-bars icon"></i>
+              <li><a href="#Home">Home</a></li>
+              <li><a href="#Features">Features</a></li>
+              <li><a href="#pricing">Learn</a></li>
+              <li><a href="#pricing">Pricing</a></li>
+              <li><a href="#HireUs">Hire Us</a></li>
+            </ul>
+            <button class="cta-btn">Buy Now</button>
+          </div>
+        </div>
+      </header>
+      <div class="main-container">
+        <div class="Hero-section">
+          <h2 class="hero-title">
+            Empowering <br />
+            teams with the<br />
+            freedom
+          </h2>
+          <h2 class="hero-title-two">
+            Empowering teams with the freedom
+          </h2>
+          <p class="hero-description">
+            Own the unlimited power of web development
+          </p>
+          <div class="cta-btns">
+            <button class="cta-button">
+              <i class="fa-solid fa-circle-play icon"></i>Play Video
+            </button>
+            <a href="">Learn More</a>
+          </div>
+        </div>
+        <div class="right-part">
+          <div class="google">
+            <img src="./assets/logos/google.png" alt="" />
+          </div>
+          <div class="attlasian">
+            <img src="./assets/logos/atlassian.png" alt="" />
+          </div>
+          <div class="asana">
+            <img src="./assets/logos/asana.png" alt="" />
+          </div>
+          <div class="paypal">
+            <img src="./assets/logos/paypal.jpg" alt="" />
+          </div>
+          <div class="weave">
+            <img src="./assets/logos/weave.png" alt="" />
+          </div>
+          <div class="googleads">
+            <img src="./assets/logos/google-ads.png" alt="" />
+          </div>
+          <div class="calendar">
+            <img src="./assets/logos/calendar.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <main class="main-content">
+      <div class="why-font-section section-content">
+        <div class="why-font-content">
+          <h3 class="section-title">Why font</h3>
+          <p class="font-description">
+            Front is an incredibly beautiful, fully responsive, and mobile-first
+            projects on <br />
+            the web - it is the starting point for creative sites
+          </p>
+        </div>
+        <div class="features-grid">
+          <div class="feature-item">
+            <div class="feature-icon"></div>
+            <div class="feature-title">Basic Elements</div>
+          </div>
+          <div class="feature-item">
+            <div class="feature-icon"></div>
+            <div class="feature-title">Components</div>
+          </div>
+          <div class="feature-item">
+            <div class="feature-icon"></div>
+            <div class="feature-title">Combined components</div>
+          </div>
+          <div class="feature-item">
+            <div class="feature-icon"></div>
+            <div class="feature-title">Page layouts</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="section-two section-content">
+        <div class="pricing">
+          <h3 class="pricing-title">Pricing</h3>
+          <p class="pricing-description">
+            No additional costs. Pay for what you use
+          </p>
+        </div>
+        <div class="pricing-section">
+          <div class="pricing-card">
+            <div pricing-info>
+              <span class="price">59</span>
+              <span class="price-period">/ mo</span>
+            </div>
+            <div class="divider"></div>
+            <p class="description">
+              Start your Front business now. 100% guaranteed money back. No
+              questions asked.
+            </p>
+            <button class="play-button" onclick="playVideo()">
+              <i class="fa-solid fa-circle-play"></i>Play Video
+            </button>
+            <div class="no-credit">
+              <p class="no-credit-description">No credit card required.</p>
+            </div>
+          </div>
+          <div class="part-two">
+            <div class="man_one">
+              <div class="img">
+                <img src="./assets/images/components.svg" alt="" />
+              </div>
+              <h3>Hundreds of Components</h3>
+              <p>
+                Achieve maximum productivity with minimum effort with front and
+                create robust limitless products
+              </p>
+            </div>
+            <div class="cancel-part">
+              <div class="img">
+                <img src="./assets/images/cancel.svg" alt="" />
+              </div>
+              <h3>Cancel anytime</h3>
+              <p>If it is not for you, just cancel. No hidden costs or fees</p>
+            </div>
+            <div class="Image-part">
+              <div class="img">
+                <img src="./assets/images/images.svg" alt="" />
+              </div>
+              <h3>Images included</h3>
+              <p>
+                Images included we made custom license for all our premium
+                images in the front
+              </p>
+            </div>
+            <div class="money-part">
+              <div class="img">
+                <img src="./assets/images/moneyback.svg" alt="" />
+              </div>
+              <h3>Money back</h3>
+              <p>100% guaranteed money back. No questions asked</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <footer class="footer">
+      <div class="footer-content">
+        <div class="testimonial">
+          <div class="testimonial-content">
+            <h3 class="test-title">Hire Us</h3>
+            <p class="test-description">
+              Whatever your goal - We will get you there
+            </p>
+            <div class="divider"></div>
+            <div class="quote">
+              <p>"I love front! I love the ease of use, I love the fact that I
+              have total creative freedom..."</p>
+            </div>
+          </div>
+          <div class="person-info">
+            <h3 class="person">Charlotte Moore</h3>
+            <p class="role">Head of commercial, Slack</p>
+            <div class="person-image">
+              <img src="./assets/images/man_one.jpg" alt="" />
+            </div>
+          </div>
+        </div>
+        <div class="contact-form">
+          <form action="#" class="form">
+            <p class="form-title">Fill out the form and we'll be in touch with as soon as possible</p>
+            <div class="form-group-one">
+              <div class="form-control">
+                <label for="name"></label>
+                <input
+                type="text"
+                name="first-name"
+                id="name"
+                placeholder="First name"
+                >
+              </div>
+              <div class="form-control">
+                <label for="last-name"></label>
+                <input
+                type="text"
+                name="last-name"
+                id="last-name"
+                placeholder="last-name"
+                >
+              </div>
+            </div>
+            <div class="form-group-two">
+              <div class="form-control">
+                <label for="email"></label>
+                <input type="email" id="email" name="email" placeholder="Email" />
+              </div>
+            </div>
+            <div class="budget-country">
+              <div class="form-control">
+              <select name="budget" id="budget-range">
+                <option class="budget" value="" disabled selected>Budget</option>
+                <option value="$1,000">$1,000</option>
+                <option value="$5,000">$5,000</option>
+                <option value="$10,000">$10,000</option>
+                <option value="$100,000">$100,000</option>
+              </select>
+            </div>
+            <div class="form-control">
+              <select name="country" id="choose-country">
+                <option value="" disabled selected>country</option>
+                <option value="Afghanistan">Afghanistan</option>
+                <option value="United States of America">
+                  United States of America
+                </option>
+                <option value="Russia">Russia</option>
+                <option value="Germany">Germany</option>
+                <option value="France">France</option>
+              </select>
+            </div>
+            </div>
+            <div class="form-control">
+              <label for="story"></label>
+              <textarea
+                name="story"
+                rows="10"
+                cols="50"
+                id="story"
+                placeholder="Tell us more about your project, needs, and timeline, please..."
+              ></textarea>
+            </div>
+            <div class="form-control-check">
+              <input type="checkbox" id="checkbox" class="checkbox"/>
+              <label class="checkbox-label" for="checkbox"
+                >Yes, I'd like to receive occasional marketing emails from
+                Front. I have the right to opt out at any time.</label
+              >
+            </div>
+            <div class="privacy-link">
+              <p class="text-one"><a href="#">View privacy policy</a></p>
+              <p class="text-two"><a href="#">View privacy policy</a></p>
+            </div>
+            <button class="sub-btn" type="submit">Submit Form</button>
+          </form>
+        </div>
+      </div>
+
+      <div class="footer-links">
+        <div class="address">
+          <div class="logo-img">
+            <img src="./assets/logos/logo-front.svg" alt="">
+          </div>
+          <a href="https://maps.google.com/?q=addressgoeshere">
+            <i class="fa-solid fa-location-arrow"></i> 153 William Plaza,
+            Muggieburg
+          </a>
+          <!-- <a href="https://maps.apple.com/maps?q=addressgoeshere">
+            <i class="fa-solid fa-location-arrow"></i> 153 William Plaza,
+            Muggieburg
+          </a> -->
+          <div>
+            <a href="tel:10621099222"
+              ><i class="fa-solid fa-phone"></i>+1 (062) 109-9222</a
+            >
+          </div>
+        </div>
+        <div class="About-comp">
+          <ul class="about-company">
+            <li><a href="#about">About</a></li>
+            <li><a href="#careers">Careers</a></li>
+            <li><a href="#Blog">Blog</a></li>
+            <li><a href="#customers">Customers</a></li>
+            <li><a href="#hireus">Hire Us</a></li>
+          </ul>
+        </div>
+        <div class="Features">
+          <ul class="feature-list">
+            <li><a href="#press">Press</a></li>
+            <li><a href="#releasenotes">Release notes</a></li>
+            <li><a href="#integrations">Integrations</a></li>
+            <li><a href="#pricing">Pricing</a></li>
+          </ul>
+        </div>
+        <div class="documentations">
+          <ul class="documentation-list">
+            <li><a href="#support">Support</a></li>
+            <li><a href="#docs">Docs</a></li>
+            <li><a href="#status">Status</a></li>
+            <li><a href="#apireference">API Reference</a></li>
+            <li><a href="#techrequirements">Tech Requirements</a></li>
+          </ul>
+        </div>
+        <div class="resources">
+          <ul class="resource-list">
+            <li>
+              <a href="#help"><i class="fa-solid fa-circle-info"></i>Help</a>
+            </li>
+            <li>
+              <a href="#youraccount"
+                ><i class="fa-solid fa-user"></i>Your Account</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
