final project is done

--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/animation.css">
-    <link rel="stylesheet" href="./css/responsive.css">
-    <script
-      src="https://kit.fontawesome.com/68efee9f82.js"
-      crossorigin="anonymous"
-    ></script>
+    <link rel="stylesheet" href="./css/animation.css" />
+    <link rel="stylesheet" href="./css/responsive.css" />
+    <script src="https://kit.fontawesome.com/68efee9f82.js" crossorigin="anonymous"></script>
     <title>Saas company</title>
   </head>
   <body>
@@ -39,9 +36,7 @@
             teams with the<br />
             freedom
           </h2>
-          <h2 class="hero-title-two">
-            Empowering teams with the freedom
-          </h2>
+          <h2 class="hero-title-two">Empowering teams with the freedom</h2>
           <p class="hero-description">
             Own the unlimited power of web development
           </p>
@@ -183,8 +178,10 @@
             </p>
             <div class="divider"></div>
             <div class="quote">
-              <p>"I love front! I love the ease of use, I love the fact that I
-              have total creative freedom..."</p>
+              <p>
+                "I love front! I love the ease of use, I love the fact that I
+                have total creative freedom..."
+              </p>
             </div>
           </div>
           <div class="person-info">
@@ -197,55 +194,64 @@
         </div>
         <div class="contact-form">
           <form action="#" class="form">
-            <p class="form-title">Fill out the form and we'll be in touch with as soon as possible</p>
+            <p class="form-title">
+              Fill out the form and we'll be in touch with as soon as possible
+            </p>
             <div class="form-group-one">
               <div class="form-control">
                 <label for="name"></label>
                 <input
-                type="text"
-                name="first-name"
-                id="name"
-                placeholder="First name"
-                >
+                  type="text"
+                  name="first-name"
+                  id="name"
+                  placeholder="First name"
+                />
               </div>
               <div class="form-control">
                 <label for="last-name"></label>
                 <input
-                type="text"
-                name="last-name"
-                id="last-name"
-                placeholder="last-name"
-                >
+                  type="text"
+                  name="last-name"
+                  id="last-name"
+                  placeholder="last-name"
+                />
               </div>
             </div>
             <div class="form-group-two">
               <div class="form-control">
                 <label for="email"></label>
-                <input type="email" id="email" name="email" placeholder="Email" />
+                <input
+                  type="email"
+                  id="email"
+                  name="email"
+                  placeholder="Email"
+                />
               </div>
             </div>
             <div class="budget-country">
               <div class="form-control">
-              <select name="budget" id="budget-range">
-                <option class="budget" value="" disabled selected>Budget</option>
-                <option value="$1,000">$1,000</option>
-                <option value="$5,000">$5,000</option>
-                <option value="$10,000">$10,000</option>
-                <option value="$100,000">$100,000</option>
-              </select>
-            </div>
-            <div class="form-control">
-              <select name="country" id="choose-country">
-                <option value="" disabled selected>country</option>
-                <option value="Afghanistan">Afghanistan</option>
-                <option value="United States of America">
-                  United States of America
-                </option>
-                <option value="Russia">Russia</option>
-                <option value="Germany">Germany</option>
-                <option value="France">France</option>
-              </select>
-            </div>
+                <select name="budget" id="budget-range">
+                  <option class="budget" value="" disabled selected>
+                    Budget
+                  </option>
+                  <option value="$1,000">$1,000</option>
+                  <option value="$5,000">$5,000</option>
+                  <option value="$10,000">$10,000</option>
+                  <option value="$100,000">$100,000</option>
+                </select>
+              </div>
+              <div class="form-control">
+                <select name="country" id="choose-country">
+                  <option value="" disabled selected>country</option>
+                  <option value="Afghanistan">Afghanistan</option>
+                  <option value="United States of America">
+                    United States of America
+                  </option>
+                  <option value="Russia">Russia</option>
+                  <option value="Germany">Germany</option>
+                  <option value="France">France</option>
+                </select>
+              </div>
             </div>
             <div class="form-control">
               <label for="story"></label>
@@ -258,7 +264,7 @@
               ></textarea>
             </div>
             <div class="form-control-check">
-              <input type="checkbox" id="checkbox" class="checkbox"/>
+              <input type="checkbox" id="checkbox" class="checkbox" />
               <label class="checkbox-label" for="checkbox"
                 >Yes, I'd like to receive occasional marketing emails from
                 Front. I have the right to opt out at any time.</label
@@ -276,7 +282,7 @@
       <div class="footer-links">
         <div class="address">
           <div class="logo-img">
-            <img src="./assets/logos/logo-front.svg" alt="">
+            <img src="./assets/logos/logo-front.svg" alt="" />
           </div>
           <a href="https://maps.google.com/?q=addressgoeshere">
             <i class="fa-solid fa-location-arrow"></i> 153 William Plaza,
@@ -292,43 +298,54 @@
             >
           </div>
         </div>
-        <div class="About-comp">
-          <ul class="about-company">
-            <li><a href="#about">About</a></li>
-            <li><a href="#careers">Careers</a></li>
-            <li><a href="#Blog">Blog</a></li>
-            <li><a href="#customers">Customers</a></li>
-            <li><a href="#hireus">Hire Us</a></li>
-          </ul>
+        <div class="company">
+          <h3>Company</h3>
+            <ul class="about-company">
+              <li><a href="#about">About</a></li>
+              <li><a href="#careers">Careers</a></li>
+              <li><a href="#Blog">Blog</a></li>
+              <li><a href="#customers">Customers</a></li>
+              <li><a href="#hireus">Hire Us</a></li>
+            </ul>
         </div>
-        <div class="Features">
-          <ul class="feature-list">
-            <li><a href="#press">Press</a></li>
-            <li><a href="#releasenotes">Release notes</a></li>
-            <li><a href="#integrations">Integrations</a></li>
-            <li><a href="#pricing">Pricing</a></li>
-          </ul>
+
+        <div class="features">
+          <h3>Features</h3>
+          <div class="Features">
+            <ul class="feature-list">
+              <li><a href="#press">Press</a></li>
+              <li><a href="#releasenotes">Release notes</a></li>
+              <li><a href="#integrations">Integrations</a></li>
+              <li><a href="#pricing">Pricing</a></li>
+            </ul>
+          </div>
         </div>
-        <div class="documentations">
-          <ul class="documentation-list">
-            <li><a href="#support">Support</a></li>
-            <li><a href="#docs">Docs</a></li>
-            <li><a href="#status">Status</a></li>
-            <li><a href="#apireference">API Reference</a></li>
-            <li><a href="#techrequirements">Tech Requirements</a></li>
-          </ul>
+        <div class="documentation">
+          <h3>Documentation</h3>
+          <div class="documentations">
+            <ul class="documentation-list">
+              <li><a href="#support">Support</a></li>
+              <li><a href="#docs">Docs</a></li>
+              <li><a href="#status">Status</a></li>
+              <li><a href="#apireference">API Reference</a></li>
+              <li><a href="#techrequirements">Tech Requirements</a></li>
+            </ul>
+          </div>
         </div>
         <div class="resources">
-          <ul class="resource-list">
-            <li>
-              <a href="#help"><i class="fa-solid fa-circle-info"></i>Help</a>
-            </li>
-            <li>
-              <a href="#youraccount"
-                ><i class="fa-solid fa-user"></i>Your Account</a
-              >
-            </li>
-          </ul>
+          <h3>Resources</h3>
+          <div class="resources">
+            <ul class="resource-list">
+              <li>
+                <a href="#help"><i class="fa-solid fa-circle-info"></i>Help</a>
+              </li>
+              <li>
+                <a href="#youraccount"
+                  ><i class="fa-solid fa-user"></i>Your Account</a
+                >
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </footer>
